[metadata]
name = termuxessentialsbyvk
version = 0.0
description = A lightweight Termux toolkit to copy, erase, overwrite file content and scrape web tables/links with a single command.
author = vkd
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vkdatta/termuxessentialsbyvk
license = MIT

[options]
scripts =
    script/copy
    script/erase
    script/overwrite
    script/xtract
    script/list
    script/delete
    script/open
    script/home
    script/create
python_requires = >=3.6
packages = find:

[options.packages.find]
where = .

[classifiers]
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent
